--- a/index.ipynb
+++ b/index.ipynb
@@ -213,7 +213,7 @@
    "outputs": [],
    "source": [
     "def rss_values(x_values, y_values, m_values, b):\n",
-    "    return {'m': m_values, 'list(map(lambda m: residual_sum_squares(x_values, y_values, m, b), m_values))"
+    "    return {'m': m_values, 'rss_values': list(map(lambda m: residual_sum_squares(x_values, y_values, m, b), m_values))"
    ]
   },
   {
